force-app/main/default/objects/ChurnAlertEvent__e/ChurnAlertEvent__e.object-meta.xml
<CustomObject>
    <label>Churn Alert Event</label>
    <pluralLabel>Churn Alert Events</pluralLabel>
</CustomObject>