force-app/main/default/objects/ChurnAlertEvent__e/fields/AlertTimestamp__c.field-meta.xml
<CustomField>
    <fullName>AlertTimestamp__c</fullName>
    <label>Alert Timestamp</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>