force-app/main/default/objects/ChurnAlertEvent__e/fields/ChurnRiskScore__c.field-meta.xml
<CustomField>
    <fullName>ChurnRiskScore__c</fullName>
    <label>Churn Risk Score</label>
    <precision>5</precision>
    <scale>4</scale>
    <required>true</required>
    <type>Number</type>
</CustomField>