force-app/main/default/objects/ChurnAlertEvent__e/fields/RecommendedAction__c.field-meta.xml
<CustomField>
    <fullName>RecommendedAction__c</fullName>
    <label>Recommended Action</label>
    <length>255</length>
    <type>Text</type>
</CustomField>